--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,5 @@
 {{page-title "TestingExamples"}}
 
-<h2 id="title">Welcome to Ember</h2>
+<h2 id="title">Welcome to Testing Examples</h2>
 
 {{outlet}}
