Nothing to see here

--- a/app/components/book-list.hbs
+++ b/app/components/book-list.hbs
@@ -1,5 +1,7 @@
 <ul>
   {{#each @books as |book| }}
     <li data-test-id={{book.id}}>{{book.name}}</li>
+  {{else}}
+    <li>Nothing to see here</li>
   {{/each}}
 </ul>
