Convert to task and update tests

--- a/app/components/book-list.hbs
+++ b/app/components/book-list.hbs
@@ -1,7 +1,13 @@
 <ul>
-  {{#each @books as |book| }}
+  {{#each @books.lastSuccessful.value as |book| }}
     <li data-test-id={{book.id}}>{{book.name}}</li>
   {{else}}
-    <li>Nothing to see here</li>
+    {{#if @books.isRunning}}
+      <div class="loading"></div>
+    {{else if @books.lastErrored}}
+      <div class="error"></div>
+    {{else}}
+      <li>Nothing to see here</li>
+    {{/if}}
   {{/each}}
 </ul>
