--- a/app/components/patterns/yielded/breadcrumbs.hbs
+++ b/app/components/patterns/yielded/breadcrumbs.hbs
@@ -1,4 +1,5 @@
-{{yield (hash
-          Divider=(component 'patterns/yielded/breadcrumbs/divider')
-          Link=(component 'patterns/yielded/breadcrumbs/link'))
+{{yield
+  (hash
+    Divider=(component 'patterns/yielded/breadcrumbs/divider')
+    Link=(component 'patterns/yielded/breadcrumbs/link'))
 }}
