Avoid having to supply dividers

--- a/app/components/patterns/data-structure/breadcrumbs.hbs
+++ b/app/components/patterns/data-structure/breadcrumbs.hbs
@@ -1,7 +1,7 @@
 {{#if (has-block)}}
   {{yield}}
 {{else}}
-  {{#each @breadCrumbItems as | bci |}}
+  {{#each this.withDividers as | bci |}}
     {{#if bci.divider}}
       <Patterns::DataStructure::Breadcrumbs::Divider />
     {{else}}
